@@ -345,6 +345,9 @@ Extension Modules
 Library
 -------
 
+- bpo-30463: Addded empty __slots__ to abc.ABC.  This allows subclassers
+  to deny __dict__ and __weakref__ creation.  Patch by Aaron Hall.
+
 - bpo-30520: Loggers are now pickleable.
 
 - bpo-30557: faulthandler now correctly filters and displays exception codes
